tests/multiubuntu/test-cases/TC_11/TC_11_egress_toServices_single_pod.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-2
      group: group-1
  egress:
  - toServices:
    - k8sService:
        serviceName: external-service
        namespace: multiubuntu
---
